[project]
name = "purchase-order-forcasting-system"
version = "0.1.0"
description = "依過往需求量與即時庫存，提供建議採購量的系統"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-auth>=2.49.1",
    "gspread>=6.2.1",
    "pyodbc>=5.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["purchase_order"]
